<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_analysis</name>
  <version>1.0.0</version>
  <description>
    Phase 5 - Quantitative analysis. Scripts for trajectory error analysis with
    evo (ATE / RPE) and control-response (cmd_vel jerk) plotting with matplotlib.
  </description>
  <maintainer email="noreply@example.com">tb3 disturbance sim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
