<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_state_estimation</name>
  <version>1.0.0</version>
  <description>
    Phase 2 - State-estimation pipeline. robot_localization EKF configuration
    that fuses wheel-encoder forward velocity (/odom_unfiltered) with the IMU yaw
    rate (/imu) and publishes the odom -> base_footprint TF.
  </description>
  <maintainer email="noreply@example.com">tb3 disturbance sim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
